crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__typecheck_tests__can_unify_records.snap
---
source: crates/azalea-core/src/typeck/typecheck_tests.rs
expression: "format!(\"Result: {:#?}\", result)"
---
Result: Ok(
    {},
)
