crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__typecheck_tests__cannot_unify_infinite_type_ctor.snap
---
source: crates/azalea-core/src/typeck/typecheck_tests.rs
expression: "format!(\"Result: {:#?}\", result)"
---
Result: Err(
    UnificationError(
        "Cannot unify TypeCons(\"A\", [Var(\"a\")]) with TypeCons(\"a\", [Var(\"a\")])",
    ),
)
