crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__typecheck_tests__does_type_occur_in_var.snap
---
source: crates/azalea-core/src/typeck/typecheck_tests.rs
expression: "format!(\"Result: {:#?}\", result)"
---
Result: true
