crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__typecheck_tests__infer_fn_type_from_body.snap
---
source: crates/azalea-core/src/typeck/typecheck_tests.rs
expression: "format!(\"Result: {:#?}\\nEnv: {:#?}\", result, env)"
---
Result: Ok(
    (),
)
Env: {
    "f": Fn(
        Function {
            name: "f",
            args: [
                (
                    "y",
                    Int,
                ),
            ],
            return_ty: Int,
            body: Some(
                [
                    Span {
                        target: Expr(
                            Span {
                                target: Literal(
                                    Int(
                                        50,
                                    ),
                                ),
                                loc: SourceLoc {
                                    line: 1,
                                    start: 0,
                                    end: 0,
                                },
                            },
                        ),
                        loc: SourceLoc {
                            line: 1,
                            start: 0,
                            end: 0,
                        },
                    },
                    Span {
                        target: Expr(
                            Span {
                                target: Literal(
                                    Int(
                                        100,
                                    ),
                                ),
                                loc: SourceLoc {
                                    line: 1,
                                    start: 0,
                                    end: 0,
                                },
                            },
                        ),
                        loc: SourceLoc {
                            line: 1,
                            start: 0,
                            end: 0,
                        },
                    },
                ],
            ),
            body_expr: None,
        },
    ),
}
