crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__typecheck_tests__infer_fn_type_lambda.snap
---
source: crates/azalea-core/src/typeck/typecheck_tests.rs
expression: "format!(\"Result: {:#?}\\nEnv: {:#?}\", result, env)"
---
Result: Ok(
    Fn(
        Function {
            name: "lambda",
            args: [
                (
                    "a",
                    Var(
                        "a",
                    ),
                ),
            ],
            return_ty: Var(
                "a",
            ),
            body: None,
            body_expr: Some(
                Span {
                    target: Ident(
                        "a",
                    ),
                    loc: SourceLoc {
                        line: 1,
                        start: 0,
                        end: 0,
                    },
                },
            ),
        },
    ),
)
Env: {
    "a": Var(
        "a",
    ),
}
