crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__typecheck_tests__infer_most_general_types.snap
---
source: crates/azalea-core/src/typeck/typecheck_tests.rs
expression: "format!(\"Result: {:#?}\\nEnv: {:#?}\", result, env)"
---
Result: Ok(
    (),
)
Env: {
    "id": Fn(
        Function {
            name: "id",
            args: [
                (
                    "x",
                    Var(
                        "x",
                    ),
                ),
            ],
            return_ty: Var(
                "x",
            ),
            body: None,
            body_expr: Some(
                Span {
                    target: Ident(
                        "x",
                    ),
                    loc: SourceLoc {
                        line: 1,
                        start: 0,
                        end: 0,
                    },
                },
            ),
        },
    ),
}
