crates/azalea-core/src/typeck/snapshots/azalea_core__typeck__typecheck_tests__primitive_types_are_not_infinite.snap
---
source: crates/azalea-core/src/typeck/typecheck_tests.rs
expression: "format!(\"Results: {:#?}\", results)"
---
Results: [
    false,
    false,
    false,
    false,
    false,
]
